--- a/trunk/misc/conf/zabbix_agentd.win.conf
+++ b/trunk/misc/conf/zabbix_agentd.win.conf
@@ -1,4 +1,4 @@
-# This is a config file for Zabbix Agent (Unix)
+# This is a config file for Zabbix Agent (Windows)
 # To get more information about Zabbix, go to http://www.zabbix.com
 
 ############ GENERAL PARAMETERS #################
@@ -12,14 +12,9 @@
 
 DebugLevel=3
 
-# Name of PID file
-
-PidFile=/var/tmp/zabbix_agentd.pid
-
 # Name of log file.
-# If not set, syslog will be used
 
-LogFile=/tmp/zabbix_agentd.log
+LogFile=c:/zabbix_agentd.conf
 
 # Maximum size of log file in MB. Set to 0 to disable automatic log rotation.
 #LogFileSize=1
@@ -108,19 +103,10 @@ Timeout=3
 # You may include individual files or all files in a directory
 # to the configuration file.
 
-#Include=/etc/zabbix/zabbix_agent.userparams.conf
-#Include=/etc/zabbix/zabbix_agentd/
+#Include=c:\zabbix\zabbix_agent.userparams.conf
+#Include=c:\zabbix\zabbix_agentd\
 
 ####### USER-DEFINED MONITORED PARAMETERS #######
 # Format: UserParameter=<key>,<shell command>
 # Note that shell command must not return empty string or EOL only
-#UserParameter=system.test,who|wc -l
-### Set of parameters for monitoring MySQL server (v3.23.42 and later)
-### Change -u<username> and add -p<password> if required
-#UserParameter=mysql.ping,mysqladmin -uroot ping|grep alive|wc -l
-#UserParameter=mysql.uptime,mysqladmin -uroot status|cut -f2 -d":"|cut -f1 -d"T"
-#UserParameter=mysql.threads,mysqladmin -uroot status|cut -f3 -d":"|cut -f1 -d"Q"
-#UserParameter=mysql.questions,mysqladmin -uroot status|cut -f4 -d":"|cut -f1 -d"S"
-#UserParameter=mysql.slowqueries,mysqladmin -uroot status|cut -f5 -d":"|cut -f1 -d"O"
-#UserParameter=mysql.qps,mysqladmin -uroot status|cut -f9 -d":"
-#UserParameter=mysql.version,mysql -V
+#UserParameter=system.test,echo 1
