--- a/trunk/misc/conf/zabbix_proxy.conf
+++ b/trunk/misc/conf/zabbix_proxy.conf
@@ -1,101 +1,41 @@
-# This is a config file for ZABBIX server process
-# To get more information about ZABBIX,
+# This is a config file for Zabbix Proxy process
+# To get more information about Zabbix,
 # go to http://www.zabbix.com
 
 ############ GENERAL PARAMETERS #################
 
-# IP address (or hostname) of ZABBIX servers.
+# IP address (or hostname) of Zabbix server
+# Proxy will get configuration data from the server
 
 Server=127.0.0.1
 
-# Server port for sending active checks
+# Server port, port of Zabbix trapper. Default is 10051.
 
-ServerPort=10051
+#ServerPort=10051
 
-# Unique hostname.
+# Unique Proxy name. Make sure the Proxy name is known to the server!
 
-Hostname=proxy
-
-# Number of pre-forked instances of pollers
-# Default value is 5
-# This parameter must be between 0 and 255
-#StartPollers=5
-
-# Number of pre-forked instances of IPMI pollers
-# Default value is 0
-# This parameter must be between 0 and 255
-#StartIPMIPollers=0
-
-# Number of pre-forked instances of pollers for unreachable hosts
-# Default value is 1
-# This parameter must be between 0 and 255
-#StartPollersUnreachable=1
-
-# Number of pre-forked instances of trappers
-# Default value is 5
-# This parameter must be between 0 and 255
-#StartTrappers=5
-
-# Number of pre-forked instances of ICMP pingers
-# Default value is 1
-# This parameter must be between 0 and 255
-#StartPingers=1
-
-# Number of pre-forked instances of discoverers
-# Default value is 1
-# This parameter must be between 0 and 255
-#StartDiscoverers=1
-
-# Number of pre-forked instances of HTTP pollers
-# Default value is 1
-# This parameter must be between 0 and 255
-#StartHTTPPollers=1
+Hostname=proxy_name
 
 # Listen port for trapper. Default port number is 10051. This parameter
 # must be between 1024 and 32767
+
 #ListenPort=10051
 
 # Source IP address for outgoing connections
 #SourceIP=
 
-# Listen interface for trapper. Trapper will listen on all network interfaces
-# if this parameter is missing.
-#ListenIP=127.0.0.1
+# Database host name
+# Default is localhost
 
-# How often ZABBIX will perform sending hearbeat message
-# (in seconds)
-# Default value is 60 seconds
-# Set to 0 to disable heartbeat messages
-# This parameter must be between 0 and 3600
-#HeartbeatFrequency=60
+# Name of log file
+# If not set, syslog is used
 
-# How often ZABBIX will sync configuration data
-# (in seconds)
-# Default value is 3600 seconds (1h)
-# This parameter must be between 1 and 604800 (1 week)
-#ConfigFrequency=3600
+LogFile=/tmp/zabbix_server.log
 
-# How often ZABBIX will perform housekeeping procedure
-# (in hours)
-# Default value is 1 hour
-# Housekeeping is removing unnecessary information from
-# tables history, alert, and alarms
-# This parameter must be between 1 and 24
-#HousekeepingFrequency=1
+# Maximum size of log file in MB. Set to 0 to disable automatic log rotation.
 
-# How often ZABBIX will try to send unsent alerts
-# (in seconds)
-# Default value is 30 seconds
-#SenderFrequency=30
-
-# Local bufer size in hours. Proxy will keep collected data N hours.
-# Default value is 0 hours
-#ProxyLocalBuffer=0
-
-# Offline buffer size in hours. It is used when server is not available.
-# Older data is removed.
-# Default value is 1 hours
-#ProxyOfflineBuffer=1
+#LogFileSize=1
 
 # Specifies debug level
 # 0 - debug is not created
@@ -103,60 +43,21 @@ Hostname=proxy
 # 2 - error information
 # 3 - warnings (default)
 # 4 - for debugging (produces lots of information)
-#DebugLevel=3
 
-# Specifies how long we wait for agent response (in sec)
-# Must be between 1 and 30
-Timeout=5
-
-# Specifies how many seconds trapper may spend processing new data
-# Must be between 1 and 300
-#TrapperTimeout=5
-
-# After how many seconds of unreachability treat a host as unavailable
-#UnreachablePeriod=45
-
-# How often host is checked for availability during the unavailability period
-#UnavailableDelay=60
+DebugLevel=3
 
 # Name of PID file
-PidFile=/var/tmp/zabbix_proxy.pid
 
-# Name of log file
-# If not set, syslog is used
-LogFile=/tmp/zabbix_proxy.log
-
-# Maximum size of log file in MB. Set to 0 to disable automatic log rotation.
-#LogFileSize=1
-
-# Location of custom alert scripts
-AlertScriptsPath=/home/zabbix/bin/
-
-# Location of external scripts
-#ExternalScripts=/etc/zabbix/externalscripts
-
-# Location of fping. Default is /usr/sbin/fping
-# Make sure that fping binary has root ownership and SUID flag set
-#FpingLocation=/usr/sbin/fping
-
-# Location of fping6. Default is /usr/sbin/fping6
-# Make sure that fping binary has root ownership and SUID flag set
-#Fping6Location=/usr/sbin/fping6
-
-# Temporary directory. Default is /tmp
-#TmpDir=/tmp
-
-# Frequency of ICMP pings (item keys 'icmpping' and 'icmppingsec'). Default is 60 seconds.
-#PingerFrequency=60
+PidFile=/tmp/zabbix_server.pid
 
 # Database host name
-# Default is localhost
 
 #DBHost=localhost
 
 # Database name
 # SQLite3 note: path to database file must be provided. DBUser and DBPassword are ignored.
-DBName=proxy
+
+DBName=zabbix
 
 # Database user
 
@@ -170,3 +71,168 @@ DBUser=root
 # Connect to MySQL using Unix socket?
 
 #DBSocket=/tmp/mysql.sock
+
+######### PROXY SPECIFIC PARAMETERS #############
+
+# Proxy will keep data locally for N hours. This parameter
+# may be used if local data will used by third party
+# applications.
+# Default value is 0 hours.
+# This parameter must be between 0 and 720
+
+#ProxyLocalBuffer=0
+
+# Proxy will keep data N hours in case if no
+# connectivity with ZABBIX Server. Older data
+# will be lost.
+# Default value is 1 hours.
+# This parameter must be between 1 and 720
+
+#ProxyOfflineBuffer=1
+
+# Frequency of heartbeat messages in seconds. If set
+# to 0, heartbeat messages will be disabled.
+# It is used for monitoring availability of Proxy
+# on server side.
+# Default value is 60 seconds.
+# This parameter must be between 0 and 3600
+
+#HeartbeatFrequency=60
+
+# How often proxy retirieves configuration data
+# from Zabbix Server in seconds.
+# Default value is 3600 seconds.
+# This parameter must be between 1 and 3600*24*7
+
+#ConfigFrequency=3600
+
+# Proxy will send collected data to the Server every N seconds.
+# Default value is 1 second.
+# This parameter must be between 1 and 3600
+
+#DataSenderFrequency=1
+
+############ ADVANCED PARAMETERS ################
+
+# Enable database cache: 0 - disabled, 1 - enabled
+# Default value is 0.
+# Enable it for much better performance.
+
+#StartDBSyncers=0
+
+# Number of pre-forked instances of pollers
+# Default value is 5
+# This parameter must be between 0 and 255
+# You shouldn't run more than 30 pollers normally.
+
+#StartPollers=5
+
+# Number of pre-forked instances of IPMI pollers
+# Default value is 0
+# This parameter must be between 0 and 255
+
+#StartIPMIPollers=0
+
+# Number of pre-forked instances of pollers for unreachable hosts
+# Default value is 1
+1Y# This parameter must be between 0 and 255
+
+#StartPollersUnreachable=1
+
+# Number of pre-forked instances of trappers
+# Default value is 5
+# This parameter must be between 0 and 255
+
+#StartTrappers=5
+
+# Number of pre-forked instances of ICMP pingers
+# Default value is 1
+# This parameter must be between 0 and 255
+
+#StartPingers=1
+
+# Number of pre-forked instances of discoverers
+# Default value is 1
+# This parameter must be between 0 and 255
+#StartDiscoverers=1
+
+# Number of pre-forked instances of HTTP pollers
+# Default value is 1
+# This parameter must be between 0 and 255
+#StartHTTPPollers=1
+
+# Listen interface for trapper. Trapper will listen on all network interfaces
+# if this parameter is missing.
+
+#ListenIP=127.0.0.1
+
+# How often Zabbix will perform housekeeping procedure
+# (in hours)
+# Default value is 1 hour
+# Housekeeping is removing unnecessary information from
+# tables history, alert, and alarms
+# This parameter must be between 1 and 24
+
+#HousekeepingFrequency=1
+
+# How often ZABBIX will try to send unsent alerts
+# (in seconds)
+# Default value is 30 seconds
+# This parameter must be between 5 and 3600
+
+SenderFrequency=30
+
+# Uncomment this line to disable housekeeping
+
+#DisableHousekeeping=1
+
+# Specifies how long we wait for agent response (in sec)
+# Must be between 1 and 30. Default is 3 sec.
+
+#Timeout=3
+
+# Specifies how many seconds trapper may spend processing new data
+# Must be between 1 and 300
+
+#TrapperTimeout=5
+
+# After how many seconds of unreachability treat a host as unavailable
+
+#UnreachablePeriod=45
+
+# How often host is checked for availability during the unavailability period
+
+#UnavailableDelay=60
+
+# How often host is checked for availability during the unreachability period
+
+#UnreachableDelay=15
+
+# Location of external scripts
+
+#ExternalScripts=/etc/zabbix/externalscripts
+
+# Location of fping. Default is /usr/sbin/fping
+# Make sure that fping binary has root ownership and SUID flag set!
+
+#FpingLocation=/usr/sbin/fping
+
+# Location of fping6. Default is /usr/sbin/fping6
+# Make sure that fping binary has root ownership and SUID flag set
+
+#Fping6Location=/usr/sbin/fping6
+
+# Temporary directory. Default is /tmp
+
+#TmpDir=/tmp
+
+# Frequency of ICMP pings (item keys 'icmpping' and 'icmppingsec'). Default is 60 seconds.
+
+#PingerFrequency=60
+
+# You may include individual files or all files in a directory
+# to the configuration file.
+
+#Include=/etc/zabbix/zabbix_proxy.general.conf
+#Include=/etc/zabbix/zabbix_proxy/
+
