--- a/trunk/misc/conf/zabbix_proxy.conf
+++ b/trunk/misc/conf/zabbix_proxy.conf
@@ -75,7 +75,7 @@ DBUser=root
 ######### PROXY SPECIFIC PARAMETERS #############
 
 # Proxy will keep data locally for N hours. This parameter
-# may be used if local data will used by third party
+# may be used if local data will be used by third party
 # applications.
 # Default value is 0 hours.
 # This parameter must be between 0 and 720
@@ -99,7 +99,7 @@ DBUser=root
 
 #HeartbeatFrequency=60
 
-# How often proxy retirieves configuration data
+# How often proxy retrieves configuration data
 # from Zabbix Server in seconds.
 # Default value is 3600 seconds.
 # This parameter must be between 1 and 3600*24*7
@@ -135,7 +135,7 @@ DBUser=root
 
 # Number of pre-forked instances of pollers for unreachable hosts
 # Default value is 1
-1Y# This parameter must be between 0 and 255
+# This parameter must be between 0 and 255
 
 #StartPollersUnreachable=1
 
@@ -235,4 +235,3 @@ SenderFrequency=30
 
 #Include=/etc/zabbix/zabbix_proxy.general.conf
 #Include=/etc/zabbix/zabbix_proxy/
-
