--- a/trunk/misc/conf/zabbix_agentd.win.conf
+++ b/trunk/misc/conf/zabbix_agentd.win.conf
@@ -14,7 +14,7 @@ DebugLevel=3
 
 # Name of log file.
 
-LogFile=c:/zabbix_agentd.conf
+LogFile=c:/zabbix_agentd.log
 
 # Maximum size of log file in MB. Set to 0 to disable automatic log rotation.
 #LogFileSize=1
@@ -76,7 +76,6 @@ Hostname=Zabbix Server
 # This parameter must be between 1 and 3600.
 
 #BufferSend=5
-
 
 # Maximum number of values in a memory buffer. The agent will
 # send all collected data to ZABBIX Server or Proxy if
