--- a/trunk/src/zabbix_server/trapper/Makefile.am
+++ b/trunk/src/zabbix_server/trapper/Makefile.am
@@ -10,4 +10,5 @@ libzbxtrapper_a_SOURCES = \
 	nodecommand.c nodecommand.h \
 	../nodewatcher/nodesender.c ../nodewatcher/nodesender.h \
 	proxyconfig.c proxyconfig.h \
-	proxydiscovery.c proxydiscovery.h
+	proxydiscovery.c proxydiscovery.h \
+	proxyautoreg.c proxyautoreg.h
