- [DEV-414] created basic man pages for all Zabbix binaries

--- a/configure.in
+++ b/configure.in
@@ -1227,6 +1227,7 @@ AC_OUTPUT([
 	src/zabbix_proxy/proxyconfig/Makefile
 	src/zabbix_proxy/datasender/Makefile
 	upgrades/Makefile
+	man/Makefile
 	])
 
 echo "
