--- a/trunk/src/libs/zbxdbhigh/Makefile.am
+++ b/trunk/src/libs/zbxdbhigh/Makefile.am
@@ -12,6 +12,7 @@ libzbxdbhigh_a_SOURCES = \
 	host.c \
 	${ODBC_SRC} \
 	db.c \
-	dbschema.c
+	dbschema.c \
+	macro.c
 
 libzbxdbhigh_a_CFLAGS = -I@top_srcdir@/src/zabbix_server/
