- [ZBX-1046] add DBPort description; note that socket is used for MySQL if DBHost is localhost

--- a/misc/conf/zabbix_proxy.conf
+++ b/misc/conf/zabbix_proxy.conf
@@ -48,6 +48,7 @@ DebugLevel=3
 PidFile=/tmp/zabbix_proxy.pid
 
 # Database host name
+# If set to localhost, socket is used for MySQL
 # Default is localhost
 
 #DBHost=localhost
@@ -69,6 +70,13 @@ DBUser=root
 # Connect to MySQL using Unix socket?
 
 #DBSocket=/tmp/mysql.sock
+
+# Option: DBPort
+#	Database port when not using local socket. Ignored for SQLite.
+#	Mandatory: no
+#
+# Default:
+# DBPort=3306 # for MySQL
 
 ######### PROXY SPECIFIC PARAMETERS #############
 
