--- a/misc/conf/zabbix_server.conf
+++ b/misc/conf/zabbix_server.conf
@@ -40,6 +40,7 @@ DebugLevel=3
 PidFile=/tmp/zabbix_server.pid
 
 # Database host name
+# If set to localhost, socket is used for MySQL
 # Default is localhost
 
 #DBHost=localhost
@@ -61,6 +62,13 @@ DBUser=root
 # Connect to MySQL using Unix socket?
 
 #DBSocket=/tmp/mysql.sock
+
+# Option: DBPort
+#	Database port when not using local socket. Ignored for SQLite.
+#	Mandatory: no
+#
+# Default:
+# DBPort=3306 # for MySQL
 
 ############ ADVANCED PARAMETERS ################
 
