- [DEV-137] use new format for more configuration parameters;  - [DEV-137] resurrect PingerFrequency parameter;  - [DEV-137] add NodeNoEvents and NodeNoHistory parameters;  - [DEV-137] make proxy log to zabbix_proxy.log instead of zabbix_server.log by default

--- a/misc/conf/zabbix_server.conf
+++ b/misc/conf/zabbix_server.conf
@@ -1,190 +1,321 @@
-# This is a config file for Zabbix Server process
+# This is a configuration file for Zabbix Server process
 # To get more information about Zabbix,
-# go to http://www.zabbix.com
+# visit http://www.zabbix.com
 
 ############ GENERAL PARAMETERS #################
 
-# This defines unique NodeID in distributed setup,
-# Default value 0 (standalone server)
-# This parameter must be between 0 and 999
-#NodeID=0
+### Option: NodeID
+#	Unique NodeID in distributed setup.
+#
+# Mandatory: no
+# Range: 0-999
+# Default:
+# NodeID=0 # standalone server
 
-# Listen port for trapper. Default port number is 10051. This parameter
-# must be between 1024 and 32767
+### Option: ListenPort
+#	Listen port for trapper.
+#
+# Mandatory: no
+# Range: 1024-32767
+# Default:
+# ListenPort=10051
 
-#ListenPort=10051
+### Option: SourceIP
+#	Source IP address for outgoing connections.
+#
+# Mandatory: no
+# Default:
+# SourceIP=
 
-# Source IP address for outgoing connections
-#SourceIP=
-
-# Name of log file
-# If not set, syslog is used
+### Option: LogFile
+#	Name of log file.
+#	If not set, syslog is used.
+#
+# Mandatory: no
+# Default:
+# LogFile=
 
 LogFile=/tmp/zabbix_server.log
 
-# Maximum size of log file in MB. Set to 0 to disable automatic log rotation.
+### Option: LogFileSize
+#	Maximum size of log file in MB. Set to 0 to disable automatic log rotation.
+#
+# Mandatory: no
+# Default:
+# LogFileSize=1
 
-#LogFileSize=1
+### Option: DebugLevel
+#	Specifies debug level
+#	0 - no debug
+#	1 - critical information
+#	2 - error information
+#	3 - warnings
+#	4 - for debugging (produces lots of information)
+#
+# Mandatory: no
+# Default:
+# DebugLevel=3
 
-# Specifies debug level
-# 0 - debug is not created
-# 1 - critical information
-# 2 - error information
-# 3 - warnings (default)
-# 4 - for debugging (produces lots of information)
+### Option: PidFile
+#	Name of PID file.
+#
+# Mandatory: no
+# Default:
+# PidFile=/tmp/zabbix_server.pid
 
-DebugLevel=3
+### Option: DBHost
+#	Database host name.
+#	If set to localhost, socket is used for MySQL.
+#
+# Mandatory: no
+# Default:
+# DBHost=localhost
 
-# Name of PID file
-
-PidFile=/tmp/zabbix_server.pid
-
-# Database host name
-# If set to localhost, socket is used for MySQL
-# Default is localhost
-
-#DBHost=localhost
-
-# Database name
-# SQLite3 note: path to database file must be provided. DBUser and DBPassword are ignored.
+### Option: DBName
+#	Database name.
+#	For SQLite3 path to database file must be provided. DBUser and DBPassword are ignored.
+#
+# Mandatory: yes
+# Default:
+# DBName=
 
 DBName=zabbix
 
-# Database user
+### Option: DBUser
+#	Database user. Ignored for SQLite.
+#
+# Default:
+# DBUser=
 
 DBUser=root
 
-# Database password
-# Comment this line if no password is used
-
-#DBPassword=<password>
-
-# Connect to MySQL using Unix socket?
-
-#DBSocket=/tmp/mysql.sock
-
-# Option: DBPort
-#	Database port when not using local socket. Ignored for SQLite.
-#	Mandatory: no
+### Option: DBPassword
+#	Database password. Ignored for SQLite.
+#	Comment this line if no password is used.
 #
+# Mandatory: no
+# Default:
+# DBPassword=
+
+### Option: DBSocket
+#	Path to MySQL socket.
+#
+# Mandatory: no
+# Default:
+# DBSocket=/tmp/mysql.sock
+
+### Option: DBPort
+#	Database port when not using local socket. Ignored for SQLite.
+#
+# Mandatory: no
+# Range: 1024-65535
 # Default:
 # DBPort=3306 # for MySQL
 
 ############ ADVANCED PARAMETERS ################
 
-# Number of pre-forked instances of pollers
-# Default value is 5
-# This parameter must be between 0 and 255
-# You shouldn't run more than 30 pollers normally.
+### Option: StartPollers
+#	Number of pre-forked instances of pollers.
+#	You shouldn't run more than 30 pollers normally.
+#
+# Mandatory: no
+# Range: 0-255
+# Default:
+# StartPollers=5
 
-#StartPollers=5
+### Option: StartIPMIPollers
+#	Number of pre-forked instances of IPMI pollers.
+#
+# Mandatory: no
+# Range: 0-255
+# Default:
+# StartIPMIPollers=0
 
-# Number of pre-forked instances of IPMI pollers
-# Default value is 0
-# This parameter must be between 0 and 255
+### Option: StartPollersUnreachable
+#	Number of pre-forked instances of pollers for unreachable hosts.
+#
+# Mandatory: no
+# Range: 0-255
+# Default:
+# StartPollersUnreachable=1
 
-#StartIPMIPollers=0
+### Option: StartTrappers
+#	Number of pre-forked instances of trappers
+#
+# Mandatory: no
+# Range: 0-255
+# Default:
+# StartTrappers=5
 
-# Number of pre-forked instances of pollers for unreachable hosts
-# Default value is 1
-# This parameter must be between 0 and 255
+### Option: StartPingers
+#	Number of pre-forked instances of ICMP pingers.
+#
+# Mandatory: no
+# Range: 0-255
+# Default:
+# StartPingers=1
 
-#StartPollersUnreachable=1
+### Option: StartDiscoverers
+#	Number of pre-forked instances of discoverers.
+#
+# Mandatory: no
+# Range: 0-255
+# Default:
+# StartDiscoverers=1
 
-# Number of pre-forked instances of trappers
-# Default value is 5
-# This parameter must be between 0 and 255
+### Option: StartHTTPPollers
+#	Number of pre-forked instances of HTTP pollers.
+#
+# Mandatory: no
+# Range: 0-255
+# Default:
+# StartHTTPPollers=1
 
-#StartTrappers=5
+### Option: ListenIP
+#	Listen interface for trapper.
+#	Trapper will listen on all network interfaces if this parameter is missing.
+#
+# Mandatory: no
+# Default:
+# ListenIP=
 
-# Number of pre-forked instances of ICMP pingers
-# Default value is 1
-# This parameter must be between 0 and 255
+# ListenIP=127.0.0.1
 
-#StartPingers=1
+### Option: HousekeepingFrequency
+#	How often Zabbix will perform housekeeping procedure (in hours).
+#	Housekeeping is removing unnecessary information from history, alert, and alarms tables.
+#
+# Mandatory: no
+# Range: 1-24
+# Default:
+# HousekeepingFrequency=1
 
-# Number of pre-forked instances of discoverers
-# Default value is 1
-# This parameter must be between 0 and 255
-#StartDiscoverers=1
+### Option: DisableHousekeeping
+#	If set to 1, disables housekeeping.
+#
+# Mandatory: no
+# Range: 0-1
+# Default:
+# DisableHousekeeping=0
 
-# Number of pre-forked instances of HTTP pollers
-# Default value is 1
-# This parameter must be between 0 and 255
-#StartHTTPPollers=1
+### Option: SenderFrequency
+#	How often Zabbix will try to send unsent alerts (in seconds).
+#
+# Mandatory: no
+# Range: 5-3600
+# Default:
+# SenderFrequency=30
 
-# Listen interface for trapper. Trapper will listen on all network interfaces
-# if this parameter is missing.
+### Option: PingerFrequency
+#	Frequency of ICMP pinger runs, in seconds.
+#	ICMP pinger checks for configuration changes to items with keys 'icmpping' and 'icmppingsec' this often.
+#
+# Mandatory: no
+# Range: 1-3600
+# Default:
+# PingerFrequency=60
 
-#ListenIP=127.0.0.1
+### Option: NodeNoEvents
+#	If set to '1' local events won't be sent to master node.
+#
+# Mandatory: no
+# Range: 0-1
+# Default:
+# NodeNoEvents=0
 
-# How often Zabbix will perform housekeeping procedure
-# (in hours)
-# Default value is 1 hour
-# Housekeeping is removing unnecessary information from
-# tables history, alert, and alarms
-# This parameter must be between 1 and 24
+### Option: NodeNoHistory
+#	If set to '1' local history won't be sent to master node.
+#
+# Mandatory: no
+# Range: 0-1
+# Default:
+# NodeNoHistory=0
 
-#HousekeepingFrequency=1
+### Option: Timeout
+#	Specifies how long we wait for agent response (in seconds).
+#
+# Mandatory: no
+# Range: 1-30
+# Default:
+# Timeout=3
 
-# How often Zabbix will try to send unsent alerts
-# (in seconds)
-# Default value is 30 seconds
-# This parameter must be between 5 and 3600
+### Option: TrapperTimeout
+#	Specifies how many seconds trapper may spend processing new data.
+#
+# Mandatory: no
+# Range: 1-300
+# Default:
+# TrapperTimeout=300
 
-SenderFrequency=30
+# TrapperTimeout=5
 
-# Uncomment this line to disable housekeeping
+### Option: UnreachablePeriod
+#	After how many seconds of unreachability treat a host as unavailable
+#
+# Mandatory: no
+# Range: 1-3600
+# Default:
+# UnreachablePeriod=45
 
-#DisableHousekeeping=1
+### Option: UnavailableDelay
+#	How often host is checked for availability during the unavailability period.
+#
+# Mandatory: no
+# Range: 1-3600
+# Default:
+# UnavailableDelay=60
 
-# Specifies how long we wait for agent response (in sec)
-# Must be between 1 and 30. Default is 3 sec.
+### Option: UnreachableDelay
+#	How often host is checked for availability during the unreachability period
+#
+# Mandatory: no
+# Range: 1-3600
+# Default:
+# UnreachableDelay=15
 
-#Timeout=3
+### Option: AlertScriptsPath
+#	Location of custom alert scripts
+#
+# Mandatory: no
+# Default:
+# AlertScriptsPath=/home/zabbix/bin/
 
-# Specifies how many seconds trapper may spend processing new data
-# Must be between 1 and 300
+### Option: ExternalScripts
+#	Location of external scripts
+#
+# Mandatory: no
+# Default:
+# ExternalScripts=/etc/zabbix/externalscripts
 
-#TrapperTimeout=5
+### Option: FpingLocation
+#	Location of fping.
+#	Make sure that fping binary has root ownership and SUID flag set!
+#
+# Mandatory: no
+# Default:
+# FpingLocation=/usr/sbin/fping
 
-# After how many seconds of unreachability treat a host as unavailable
+### Option: Fping6Location
+#	Location of fping6.
+#	Make sure that fping binary has root ownership and SUID flag set
+#
+# Mandatory: no
+# Default:
+# Fping6Location=/usr/sbin/fping6
 
-#UnreachablePeriod=45
+### Option: TmpDir
+#	Temporary directory.
+#
+# Mandatory: no
+# Default:
+# TmpDir=/tmp
 
-# How often host is checked for availability during the unavailability period
+### Option: Include
+#	You may include individual files or all files in a directory in the configuration file.
+#
+# Mandatory: no
+# Default:
+# Include=
 
-#UnavailableDelay=60
-
-# How often host is checked for availability during the unreachability period
-
-#UnreachableDelay=15
-
-# Location of custom alert scripts
-
-AlertScriptsPath=/home/zabbix/bin/
-
-# Location of external scripts
-
-#ExternalScripts=/etc/zabbix/externalscripts
-
-# Location of fping. Default is /usr/sbin/fping
-# Make sure that fping binary has root ownership and SUID flag set!
-
-#FpingLocation=/usr/sbin/fping
-
-# Location of fping6. Default is /usr/sbin/fping6
-# Make sure that fping binary has root ownership and SUID flag set
-
-#Fping6Location=/usr/sbin/fping6
-
-# Temporary directory. Default is /tmp
-
-#TmpDir=/tmp
-
-# You may include individual files or all files in a directory
-# to the configuration file.
-
-#Include=/etc/zabbix/zabbix_server.general.conf
-#Include=/etc/zabbix/zabbix_server/
-
+# Include=/etc/zabbix/zabbix_server.general.conf
+# Include=/etc/zabbix/zabbix_server/
