- [DEV-137] use new format for more configuration parameters

--- a/misc/conf/zabbix_agentd.conf
+++ b/misc/conf/zabbix_agentd.conf
@@ -139,8 +139,8 @@ Hostname=Zabbix Server
 # BufferSend=5
 
 ### Option: BufferSize
-# Maximum number of values in a memory buffer. The agent will send
-# all collected data to Zabbix Server or Proxy if the buffer is full.
+#	Maximum number of values in a memory buffer. The agent will send
+#	all collected data to Zabbix Server or Proxy if the buffer is full.
 #
 # Mandatory: no
 # Range: 1-65535
@@ -148,10 +148,10 @@ Hostname=Zabbix Server
 # BufferSize=100
 
 ### Option: MaxLinesPerSecond
-# Maximum number of new lines the agent will send per second to Zabbix Server
-# or Proxy processing 'log' and 'eventlog' active checks.
-# The provided value will be overridden by the parameter 'maxlines',
-# provided in 'log' or 'eventlog' item key.
+#	Maximum number of new lines the agent will send per second to Zabbix Server
+#	or Proxy processing 'log' and 'eventlog' active checks.
+#	The provided value will be overridden by the parameter 'maxlines',
+#	provided in 'log' or 'eventlog' item key.
 #
 # Mandatory: no
 # Range: 1-1000
@@ -161,25 +161,36 @@ Hostname=Zabbix Server
 
 ############ ADVANCED PARAMETERS #################
 
-# Number of pre-forked instances of zabbix_agentd,
-# which process passive checks.
-# Default value is 3.
-# This parameter must be between 1 and 16.
+### Option: StartAgents
+#	Number of pre-forked instances of zabbix_agentd that process passive checks.
+#
+# Mandatory: no
+# Range: 1-16
+# Default:
+# StartAgents=3
 
-StartAgents=3
+### Option: Timeout
+#	Spend no more than Timeout seconds on processing
+#
+# Mandatory: no
+# Range: 1-30
+# Default:
+# Timeout=3
 
-# Spend no more than Timeout seconds on processing
-# Must be between 1 and 30
+### Option: Include
+#	You may include individual files or all files in a directory in the configuration file.
+#
+# Mandatory: no
+# Default:
+# Include=
 
-Timeout=3
+# Include=/etc/zabbix/zabbix_agent.userparams.conf
+# Include=/etc/zabbix/zabbix_agentd/
 
-# You may include individual files or all files in a directory
-# to the configuration file.
-
-#Include=/etc/zabbix/zabbix_agent.userparams.conf
-#Include=/etc/zabbix/zabbix_agentd/
 
 ####### USER-DEFINED MONITORED PARAMETERS #######
+
+### Option: UserParameter
 # Format: UserParameter=<key>,<shell command>
 # Note that shell command must not return empty string or EOL only
 #UserParameter=system.test,who|wc -l
