- [DEV-137] use new format for more configuration parameters; fix typos

--- a/misc/conf/zabbix_agentd.conf
+++ b/misc/conf/zabbix_agentd.conf
@@ -21,7 +21,8 @@
 LogFile=/tmp/zabbix_server.log
 
 ### Option: LogFileSize
-#	Maximum size of log file in MB. Set to 0 to disable automatic log rotation.
+#	Maximum size of log file in MB.
+#	0 - disable automatic log rotation.
 #
 # Mandatory: no
 # Default:
@@ -98,7 +99,7 @@ Hostname=Zabbix Server
 #	Disable passive checks. The agent will not listen on any TCP port.
 #	Only active checks will be processed.
 #	0 - do not disable
-#	1- disable
+#	1 - disable
 #
 # Mandatory: no
 # Default:
@@ -191,8 +192,10 @@ Hostname=Zabbix Server
 ####### USER-DEFINED MONITORED PARAMETERS #######
 
 ### Option: UserParameter
-# Format: UserParameter=<key>,<shell command>
-# Note that shell command must not return empty string or EOL only
+#	User-defined parameter to monitor. There can be several user-defined parameters.
+#	Format: UserParameter=<key>,<shell command>
+#	Note that shell command must not return empty string or EOL only.
+#	Example: UserParameter=system.test,who|wc -l
 #UserParameter=system.test,who|wc -l
 ### Set of parameters for monitoring MySQL server (v3.23.42 and later)
 ### Change -u<username> and add -p<password> if required
