--- a/misc/conf/zabbix_proxy.conf
+++ b/misc/conf/zabbix_proxy.conf
@@ -58,7 +58,8 @@ Server=127.0.0.1
 LogFile=/tmp/zabbix_proxy.log
 
 ### Option: LogFileSize
-#	Maximum size of log file in MB. Set to 0 to disable automatic log rotation.
+#	Maximum size of log file in MB.
+#	0 - disable automatic log rotation.
 #
 # Mandatory: no
 # Default:
