--- a/misc/conf/zabbix_agent.conf
+++ b/misc/conf/zabbix_agent.conf
@@ -21,8 +21,12 @@ Server=127.0.0.1
 
 
 ####### USER-DEFINED MONITORED PARAMETERS #######
-# Format: UserParameter=<key>,<shell command>
-# Note that shell command must not return empty string or EOL only
+
+### Option: UserParameter
+#	User-defined parameter to monitor. There can be several user-defined parameters.
+#	Format: UserParameter=<key>,<shell command>
+#	Note that shell command must not return empty string or EOL only.
+#	Example: UserParameter=system.test,who|wc -l
 #UserParameter=system.test,who|wc -l
 ### Set of parameters for monitoring MySQL server (v3.23.42 and later)
 ### Change -u<username> and add -p<password> if required
