--- a/misc/conf/zabbix_server.conf
+++ b/misc/conf/zabbix_server.conf
@@ -38,7 +38,8 @@
 LogFile=/tmp/zabbix_server.log
 
 ### Option: LogFileSize
-#	Maximum size of log file in MB. Set to 0 to disable automatic log rotation.
+#	Maximum size of log file in MB.
+#	0 - disable automatic log rotation.
 #
 # Mandatory: no
 # Default:
