--- a/misc/conf/zabbix_agentd.win.conf
+++ b/misc/conf/zabbix_agentd.win.conf
@@ -29,6 +29,7 @@ LogFile=c:/zabbix_agentd.log
 #	0 - disable automatic log rotation.
 #
 # Mandatory: no
+# Range: 1-1024
 # Default:
 # LogFileSize=1
 
