- [DEV-137] add pgsql note from wiki

--- a/misc/conf/zabbix_server.conf
+++ b/misc/conf/zabbix_server.conf
@@ -185,6 +185,7 @@ DBUser=root
 ### Option: HousekeepingFrequency
 #	How often Zabbix will perform housekeeping procedure (in hours).
 #	Housekeeping is removing unnecessary information from history, alert, and alarms tables.
+#	If PostgreSQL is used, suggested value is 24, as it performs VACUUM.
 #
 # Mandatory: no
 # Range: 1-24
