--- a/misc/conf/zabbix_proxy.conf
+++ b/misc/conf/zabbix_proxy.conf
@@ -265,14 +265,22 @@ DBUser=root
 # Default:
 # DisableHousekeeping=0
 
-### Option: PingerFrequency
-#	Frequency of ICMP pinger runs, in seconds.
-#	ICMP pinger checks for configuration changes to items with keys 'icmpping' and 'icmppingsec' this often.
+### Option: CacheSize
+#	Size of configuration cache, in bytes.
+#	Shared memory size, for storing hosts and items data.
+#
+# Mandatory: no
+# Range: 131072-1073741824 (128KB-1GB)
+# Default:
+# CacheSize=8388608
+
+### Option: CacheUpdateFrequency
+#	How often Zabbix will perform update of configuration cache, in seconds.
 #
 # Mandatory: no
 # Range: 1-3600
 # Default:
-# PingerFrequency=60
+# CacheUpdateFrequency=60
 
 ### Option: Timeout
 #	Specifies how long we wait for agent response (in seconds).
