- [DEV-333] added configuration data cache module

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -26,6 +26,7 @@ PROXY_SUBDIRS = \
 else
 PROXY_SUBDIRS = \
 	zabbix_server/dbsyncer \
+	zabbix_server/dbconfig \
 	zabbix_server/discoverer \
 	zabbix_server/httppoller \
 	zabbix_server/pinger \
