--- a/misc/conf/zabbix_proxy.conf
+++ b/misc/conf/zabbix_proxy.conf
@@ -347,6 +347,13 @@ DBUser=root
 # Default:
 # Fping6Location=/usr/sbin/fping6
 
+### Option: SSHKeyLocation
+#	Location of public keys for SSH checks
+#
+# Mandatory: no
+# Default:
+# SSHKeyLocation=
+
 ### Option: TmpDir
 #	Temporary directory.
 #
