--- a/src/zabbix_server/poller/Makefile.am
+++ b/src/zabbix_server/poller/Makefile.am
@@ -11,4 +11,5 @@ libzbxpoller_a_SOURCES = \
 	checks_aggregate.c checks_aggregate.h \
 	checks_external.c checks_external.h \
 	checks_ipmi.c checks_ipmi.h \
+	checks_ssh.c checks_ssh.h \
 	poller.c poller.h
