- [DEV-428] added new TELNET check 'telnet.run[]'

--- a/src/zabbix_server/poller/Makefile.am
+++ b/src/zabbix_server/poller/Makefile.am
@@ -12,4 +12,5 @@ libzbxpoller_a_SOURCES = \
 	checks_external.c checks_external.h \
 	checks_ipmi.c checks_ipmi.h \
 	checks_ssh.c checks_ssh.h \
+	checks_telnet.c checks_telnet.h \
 	poller.c poller.h
